--- a/css/common.css
+++ b/css/common.css
@@ -39,10 +39,18 @@ footer a {
 .page-title {
     font-family: "Montserrat", Arial, sans-serif;
     font-weight: bold;
-    font-size: 40px;
-    line-height: 110%; 
-    margin-bottom: 20px; 
     text-transform: uppercase;
+    font-size: 40px;
+    line-height: 110%;          
+}
+
+.page-title-two {
+    font-family: "Montserrat", Arial, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: left;
+    font-size: 38px;
+    line-height: 46px;
 }
 
 .container {
@@ -106,7 +114,7 @@ footer a {
     text-transform: uppercase;
 }
 
-.header-logo:hover, .header-logo:focus {
+.header-logo:hover {
     opacity: .5;     
 }
 
@@ -131,7 +139,7 @@ footer a {
     margin-right: 20px; 
 }
 
-.header-item:hover, .header-item:focus {
+.header-item:hover {
     opacity: .5;
     background: none;
 }
@@ -144,7 +152,7 @@ footer a {
     margin-right: 20px; 
 }
 
-.header-search:hover, .header-search:focus  {
+.header-search:hover {
     opacity: .5;
     background: none;
 }
@@ -156,8 +164,6 @@ footer a {
 
 .header-contacts {
     font-weight: bold;
-    font-size: 14px;
-    line-height: 19px;
     -webkit-display: flex;
         -moz-display: flex;
             display: flex;
@@ -168,7 +174,7 @@ footer a {
     color: #1E0606;
 }
 
-.header-contacts:hover, .header-contacts:focus {
+.header-contacts:hover {
     opacity: .5;    
 }
 
@@ -252,36 +258,176 @@ footer a {
 }
 
 .pagination-item {
-    margin-right: 47px; 
-    list-style-type: none;    
-    margin-left: 5px;    
+    margin-right: 35px;
+    list-style-type: none;
+    margin-left: 29px;    
 }
 
-.pg-active {
+.page-active {
     fill: #C29974;
 }
 
-a:hover svg path, a:focus svg path {
+a:hover svg path {
     fill:#AAAAAA;
     cursor: pointer;
     text-decoration: none;
 }
 
-/* footer */
+/* Форма контактов */
 
-.footer {
-    margin-bottom: 100px;
+.contact-form {
+    max-width: 680px;
+    width: 100%;
+    background: #E5EAF8;
+    margin: 0 auto 60px;
+    padding: 42px 40px;
 }
 
+.contact-form fieldset{
+    border: none;
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;
+    max-width: 0%;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 20px;    
+}
+
+.contact-form label {
+    font-size: 14px;
+    line-height: 19px;
+    color: #1E0606;
+    margin-bottom: 3px;
+}
+
+.contact-wrapper {
+    -webkit-display: flex;
+        -moz-display: flex;
+            display: flex;  
+}
+
+div .form-name {    
+    width: 600px;
+    bottom: 50px;
+}
+
+.contact-block {
+    -webkit-flex-direction: column; 
+        -moz-flex-direction: column;  
+            flex-direction: column;
+    width: 290px;
+    margin-right: 20px;
+}
+
+.contact-wrapper:focus-within label {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.contact-container:focus-within label {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.contact-form input,
+.contact-form textarea {
+    height: 50px;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    padding: 12px 20px;
+    font-size: 18px;
+    line-height: 25px;        
+}  
+
+.contact-form textarea {
+    width: 600px;
+    height: auto;
+    resize: none;
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    outline: none;
+}
+
+.contact-form input::placeholder {
+    color: #1E0606;
+}
+
+.checkbox-agreement {
+    width: 542px;        
+}
+
+.checkbox-agreement label {
+    position: relative;
+    padding-left: 30px;
+    cursor: pointer;       
+}   
+
+.input {
+    display: none;
+}
+
+.checkbox-agreement label:before,
+.checkbox-agreement label:after {
+    content: "";
+    position: absolute;
+    display: block;    
+}
+
+.checkbox-agreement label:before {
+    width: 15px;
+    height: 15px;
+    top: 0;
+    left: 0;    
+    border: 2px solid #C29974;   
+    border-radius: 20%; 
+}
+
+.checkbox-agreement label:after {
+    content: " ";
+    background-image: url(../images/Vector\ 1\ \(Stroke\).png);
+    background-size: 14px 14px;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 13px;
+    height: 13px;
+    top: 5px;
+    left: 5px;
+    opacity: 0;
+}   
+
+.input:checked + label:after {
+    opacity: 1;
+}
+
+.input:checked:hover + label:hover {
+    opacity: 1;
+    text-decoration: underline;
+}
+
+.input:disabled + label {
+    opacity: .7;
+}
+
+.checkbox-label {
+   outline: none; 
+}
+
+/* footer */
+
 .footer-content  {
-    padding-top: 90px;    
+    padding-top: 87px;    
     padding-bottom: 130px; 
 }
 
 .footer-first-block {
     -webkit-display: flex;
         -moz-display: flex;
-            display: flex;
+            display: flex;               
+}
+
+.footer-second-block {
+    margin-top: 12px;
 }
 
 .footer-block-item {
@@ -293,7 +439,7 @@ a:hover svg path, a:focus svg path {
     margin-bottom: 15px;
 }
 
-.footer-link:hover, .footer-link:focus {
+.footer-link:hover {
     background: none;
     opacity: .5;
 }
@@ -310,20 +456,17 @@ a:hover svg path, a:focus svg path {
 
 input[type="email"] {
     background: #666666;
-    border: 2px solid transparent;
-    max-width: 300px;    
+    border: 1px solid transparent;
+    width: 100%;
     outline: none;
 }
 
-input[type="email"]:hover,
-input[type="email"]:focus,
-input[type="email"]:active {
+input[type="email"]:hover {
     background: #666666;
     list-style-type: none;
-    border-top: 2px solid #FFFDFD;
-    border-bottom: 2px solid #FFFDFD;
-    border-left: 2px solid #FFFDFD;
-    max-width: 300px;
+    border-top: 1px solid #FFFDFD;
+    border-bottom: 1px solid #FFFDFD;
+    border-left: 1px solid #FFFDFD;    
 }
 
 .footer-btn {
@@ -337,7 +480,11 @@ input[type="email"]:active {
     outline:none;  
 }
 
-.social-link:hover, .social-link:focus {
+.footer-btn:focus {
+    background: #C29974;
+}
+
+.social-link:hover {
     opacity: .5;
     background: none;
 }
@@ -346,7 +493,7 @@ input[type="email"]:active {
     opacity: .2;
 }
 
-.footer-link:hover, .footer-link:focus {
+.footer-link:hover {
     color: #A1A1A1;
     background: none;
     opacity: .5;
@@ -357,15 +504,18 @@ input[type="email"]:active {
 }
 
 div > h4 {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
     color: #AAAAAA;
-    border-bottom:2px solid #A2A2A2;
+    border-bottom: 1px solid #A2A2A2;
     width: 375px;
     padding-bottom: 23px;
 }
 
 .footer-list {
     color:#FFFFFF;
-    margin-bottom: 28px;
+    margin-bottom: 28px;    
 }
 
 .social-list {
@@ -384,7 +534,7 @@ div > h4 {
     -webkit-display: flex;
         -moz-display: flex;
             display: flex;
-    border-top:2px solid #A2A2A2;    
+    border-top: 1px solid #A2A2A2;    
 }
 
 .rating-item {
@@ -400,7 +550,7 @@ div > h4 {
     margin-top: 15px;     
 }   
 
-.rating-wrapper::before {
+.rating-wrapper:before {
     content: '★★★★★';
     display: block;   
 }
@@ -445,7 +595,7 @@ div > h4 {
     display: block;    
 }
 
-.rating-item:hover, .rating-item:focus {
+.rating-item:hover {
     color: #836E5B;
     cursor: pointer;
 }
@@ -478,7 +628,7 @@ div > h4 {
     text-decoration: none;      
 }
 
-.copyright-link:hover, .copyright-link:focus {
+.copyright-link:hover {
     color:#FFFFFF;
     text-decoration: underline;
     background: none;
