--- a/css/blog.css
+++ b/css/blog.css
@@ -1,3 +1,7 @@
+.blog-title {
+    margin-bottom: -2px;
+}
+
 .posts {
     margin-bottom: 52px; 
 }
@@ -17,19 +21,26 @@
 
 .posts-item {
     max-width: 380px;
-    margin-bottom: 19px;
-    margin-left: 10px;
+    margin-bottom: 15px;
+    margin-left: 8px;
     overflow: hidden;    
 }
 
+.posts-date {
+    color: #818181;
+    margin-bottom: -13px;
+}
+
 .posts-title {
+    font-family: "Montserrat", Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
     font-size: 24px;
-    line-height: 31px;
+    line-height: 31px;    
     color: #1E0606;
 }
 
-.posts-title:hover,
-.posts-title:focus {
+.posts-title:hover {
     text-decoration: underline;
     cursor: pointer;
 }
@@ -37,4 +48,9 @@
 .posts-title:active {
     text-decoration: underline;
     cursor: pointer;
+}
+
+.posts-info {
+    font-size: 18px;
+    line-height: 25px;
 }
