--- a/css/catalog.css
+++ b/css/catalog.css
@@ -11,7 +11,8 @@
 /* Products */
 
 .products {
-    margin-bottom: 32px;
+    margin-bottom: 43px;
+    margin-top: -11px;  
 }
 
 .products-list {
