--- a/css/common.css
+++ b/css/common.css
@@ -423,7 +423,10 @@ div .form-name {
 .footer-first-block {
     -webkit-display: flex;
         -moz-display: flex;
-            display: flex;               
+            display: flex;  
+    -webkit-align-items: flex-start;
+        -moz-align-items: flex-start;
+            align-items: flex-start;        
 }
 
 .footer-second-block {
@@ -431,7 +434,7 @@ div .form-name {
 }
 
 .footer-block-item {
-    margin: auto;
+    margin: 0 auto;
     max-width: 380px;
 }
 
@@ -457,6 +460,7 @@ div .form-name {
 input[type="email"] {
     background: #666666;
     border: 1px solid transparent;
+    max-width: 300px;
     width: 100%;
     outline: none;
 }
@@ -511,6 +515,11 @@ div > h4 {
     border-bottom: 1px solid #A2A2A2;
     width: 375px;
     padding-bottom: 23px;
+    margin-left: -7px;
+}
+
+.footer-nav {
+    margin-left: -11px;
 }
 
 .footer-list {
