--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
 /* Products */
 
 .products {
-    margin-bottom: 90px;
+    margin-bottom: 92px;
 }
 
 .products-title {
@@ -192,7 +192,8 @@
 }
 
 .info_item {
-    margin-left: 25px;
+    margin-left: 16px;
+    margin-top: 14px;
 }
 
 /* delivery */
