--- a/css/blog.css
+++ b/css/blog.css
@@ -25,6 +25,29 @@
     margin-left: 8px;
     overflow: hidden;    
 }
+.posts-img-one {
+    background: #F9D819;
+}
+
+.posts-img-two {
+    background: #A2A6A5;
+}
+
+.posts-img-three {
+    background: #FB7403;
+}
+
+.posts-img-four {
+    background: #4080CE;
+}
+
+.posts-img-five {
+    background: #EEEEEE;
+}
+
+.posts-img-six {
+    background: #524C33;
+}
 
 .posts-date {
     color: #818181;
